# hydra-fire

./: .gitignore  CHANGELOG.md  LICENSE  README.md  prompts.md  pyproject.toml
docs/: CLI_CONFIG.md  DESIGN.md  USAGE.md
examples/: README.md
examples/dataclass_schema/: README.md  app.py  cli.config.yaml
examples/dataclass_schema/configs/: config.yaml
examples/function_signature/: README.md  app.py  cli.config.yaml
examples/function_signature/configs/: config.yaml
examples/hydra_tree/: README.md  app.py  cli.config.yaml
examples/hydra_tree/configs/: config.yaml
examples/pydantic_schema/: README.md  app.py  cli.config.yaml
examples/sweep_preview/: README.md  app.py  cli.config.yaml
examples/sweep_preview/configs/: config.yaml
examples/sweep_training/: README.md  app.py  cli.config.yaml
examples/sweep_training/configs/: config.yaml
src/hydra_fire/: __init__.py  app.py  cli.py  commands.py  compose.py  docs.py  errors.py  generated.py  render.py  validate.py
src/hydra_fire/core/: __init__.py  config.py  errors.py  overrides.py  spec.py
src/hydra_fire/hydra/: __init__.py  discover.py
src/hydra_fire/tui/: state.py  (+2 more)
tests/: test_app.py  test_cli.py  test_compose.py  test_core_config.py  test_core_overrides.py  test_core_spec.py  test_docs.py  test_examples.py  test_generated_cli.py  test_hydra_discovery.py  test_nested_pydantic_help.py  test_no_shell_completion.py  test_packaging.py  test_sources_build.py  test_sources_dataclass.py  test_sources_function.py  test_sources_pydantic.py  test_tui_launcher.py  test_tui_state.py  test_validation_failures.py
tests/fixtures/: cli.config.yaml
(+14 files in other folders)
