[project]
name = "hydra-fire"
version = "0.1.1"
description = "Schema-aware CLI ergonomics for Hydra-backed Python apps."
readme = "README.md"
authors = [
    { name = "Hongyi", email = "hongyi001@e.ntu.edu.sg" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["hydra", "cli", "configuration", "pydantic", "dataclass"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "pydantic>=2",
    "prompt-toolkit>=3.0",
    "pyyaml>=6",
    "rich>=13",
    "typer>=0.12",
    "tqdm>=4.67.3",
]

[project.scripts]
hydra-fire = "hydra_fire.cli:app"

[project.urls]
Repository = "https://github.com/PengHongyiNTU/hydra-fire"
Documentation = "https://github.com/PengHongyiNTU/hydra-fire#readme"
Issues = "https://github.com/PengHongyiNTU/hydra-fire/issues"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "types-PyYAML>=6",
]

[build-system]
requires = ["uv_build>=0.9.9,<1.0.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
